# sample_project_astropy

./: .rtd-environment.yml  .travis.yml  MANIFEST.in  README.rst  setup.cfg  setup.py
docs/: conf.py  index.rst
docs/sample_project_astropy/: index.rst
sample_project_astropy/: __init__.py
sample_project_astropy/example_subpkg/: setup_package.py
